--- a/homework/notebook.ipynb
+++ b/homework/notebook.ipynb
@@ -175,6 +175,23 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hola\")"
+   ]
   }
  ],
  "metadata": {
